0.1.0/src/docs/samples/java-cpp-jni-library/index.adoc
:jbake-version: 0.1.0
:toc:
:toclevels: 1
:toc-title: Contents
:icons: font
:idprefix:
:jbake-status: published
:encoding: utf-8
:lang: en-US
:sectanchors: true
:sectlinks: true
:linkattrs: true
:gradle-user-manual: https://docs.gradle.org/6.2.1/userguide
:gradle-language-reference: https://docs.gradle.org/6.2.1/dsl
:gradle-api-reference: https://docs.gradle.org/6.2.1/javadoc
:gradle-guides: https://guides.gradle.org/
:jbake-permalink: java-cpp-jni-library
:jbake-archivebasename: JavaCppJniLibrary
:includedir: /Users/daniel/gradle/gradle-native/subprojects/docs/src/docs/samples/java-cpp-jni-library
= Java/{cpp} JNI Library
:jbake-summary: JNI library implemented in Java and {cpp}.
:jbake-type: sample_chapter
:jbake-category: Java Native Interface (JNI)
:jbake-description: See how the Nokee Gradle plugins are used for building a Java Native Interface (JNI) library implemented in Java and {cpp}.

NOTE: You can open this sample inside an IDE using the https://www.jetbrains.com/help/idea/gradle.html#gradle_import_project_start[IntelliJ native importer] or https://projects.eclipse.org/projects/tools.buildship[Eclipse Buildship].

This sample shows how a JNI library implemented in Java and {cpp} can be built with Gradle.
The library has no dependencies, and the build has a minimal configuration.

====
[.multi-language-sample]
=====
.build.gradle
[source,groovy]
----
include::{includedir}/groovy-dsl/build.gradle[]
----
=====
[.multi-language-sample]
=====
.build.gradle.kts
[source,kotlin]
----
include::{includedir}/kotlin-dsl/build.gradle.kts[]
----
=====
====

To build the library:

[listing.terminal]
----
$ ./gradlew assemble

BUILD SUCCESSFUL
4 actionable tasks: 4 executed
----

The JNI library produced inside `./build/libs` directory:

[listing.terminal]
----
$ ls ./build/libs/*.jar
./build/libs/java-cpp-jni-library.jar
----

For more information, see <<../../manual/jni_library_plugin.adoc#,JNI Library Plugin>> and <<../../manual/cpp_language_plugin.adoc#{cpp} Language Plugin>> reference chapters.
